Release 26.0.0
Release notes are available at: https://docs.dremio.com/release-notes/

Change-Id: I141915984a1cb2964b711792129e0ee7b3444d26